# Core-Caven-ESP32

./: .gitignore  README.md
ESP32/ESP-Hello/: README.md  partitions.csv
ESP32/ESP-Hello/main/: CMakeLists.txt
ESP32/ESP-Hello/main/GUI/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h
ESP32/ESP-Hello/main/GUI/ui/: ui.h
ESP32/ESP-Hello/main/Mode/: IC_QMI8658.c  IC_QMI8658.h  Mode.c  Mode.h
ESP32/ESP-Hello/main/User_app/: E_1.h  Items.h  center_app.h  main.c  show_app.c  show_app.h
ESP32/ESP-Hello/main/esp_driver/inc/: Base.h  Base_Flash.h  Base_GPIO.h  Base_IIC.h  Base_SPI.h  Base_Sys_Time.h  Base_UART.h
ESP32/ESP-Hello/main/esp_driver/src/: Base_Flash.c  Base_GPIO.c  Base_IIC.c  Base_SPI.c  Base_Sys_Time.c  Base_UART.c
ESP32/ble_spp_server/main/: ble_spp_server_demo.c
ESP32/bluetooth_a2dp_gatts_coex/: sdkconfig
ESP32/bs-oled-ZNJJ/: sdkconfig
ESP32/bs-oled-ZNJJ/main/: CMakeLists.txt
ESP32/bs-oled-ZNJJ/main/User_app/: Items.h  Message_info_app.c  Message_info_app.h  caven_app.c  caven_app.h  main.c  main.h  system_app.c  system_app.h
ESP32/bs-oled-ZNJJ/main/driver/inc/: MODE_LCD.h  MODE_RTC8564.h  Network_manage.h  http.h  https.h  tcp_server_link.h
ESP32/bs-oled-ZNJJ/main/driver/src/: MODE_LCD.c  MODE_RTC8564.c  MODE_gpio.c  MODE_st7789_dever.c  Network_manage.c  http.c  https.c  information.c  tcp_client_link.c  tcp_server_link.c
ESP32/eth_link/: CMakeLists.txt  README.md
ESP32/eth_link-5v4/main/User_app/: show_app.c
ESP32/eth_link-5v4/main/driver/inc/: Network_manage.h
ESP32/eth_link-5v4/main/driver/src/: Network_manage.c
ESP32/eth_link/main/: CMakeLists.txt
ESP32/eth_link/main/API/: caven_at_info_frame.c
ESP32/eth_link/main/User_app/: Items.h  Message_info_app.c  Message_info_app.h  caven_at_info_frame.c  caven_at_info_frame.h  hongshu.h  main.c  system_app.c  system_app.h
ESP32/eth_link/main/driver/inc/: Caven_Type.h  Custom_bluetooth.h  Custom_gpio.h  Custom_uart.h  MODE_BMI088.h  MODE_RTC8564.h  Network_manage.h  default.h  http.h  https.h  info_frame_handle.h
ESP32/eth_link/main/driver/src/: Custom_gpio.c  Custom_uart.c  MODE_RTC8564.c  Network_manage.c  http.c  https.c  information.c  tcp_client_link.c  tcp_server_link.c
ESP32/freertos/: Makefile  sdkconfig  sdkconfig.old
ESP32/freertos/main/: CMakeLists.txt
ESP32/freertos/main/User_app/: Items.h  Precompiling_define.h  gxwl_lg.h  ls_lg.h  main.c  main.h  sys_typedef.h
ESP32/freertos/main/driver/inc/: Custom_bluetooth.h  Custom_gpio.h  Custom_uart.h  draw.h  information.h  lcd.h  lcd_st7789.h  rtc_time.h
ESP32/freertos/main/driver/src/: Custom_bluetooth.c  Custom_gpio.c  Custom_uart.c  MODE_OLED.c  default.c  info_frame_handle.c  information.c  lcd.c  lcd_st7789.c
ESP32/hello_world/: README.md  sdkconfig  sdkconfig.old
ESP32/hello_world/main/: hello_world_main.c
ESP32/https_request/: sdkconfig  sdkconfig.old
ESP32/https_request/main/: https_request_example_main.c
ESP32/main-star/: sdkconfig  sdkconfig.old
ESP32/main-star/main/: CMakeLists.txt  component.mk
ESP32/main-star/main/GUI/: lv_conf.h  lv_conf.h.bak
ESP32/main-star/main/GUI/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ESP32/main-star/main/GUI/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_text.c  ui_comp_text.h
ESP32/main-star/main/GUI/ui/images/: ui_img_aili_png.c
ESP32/main-star/main/GUI/ui/screens/: ui_Screen1.c
ESP32/main-star/main/User_app/: Items.h  main.c  main.h  show_app.c  show_app.h  sys_typedef.h  zhang.h
ESP32/main-star/main/driver/inc/: Caven_Type.h  Custom_uart.h  MODE_BMI088.h  MODE_LCD.h  MODE_OLED.h  MODE_st7789_dever.h  Mode_RTC8564.h  Network_manage.h  User_MQTT.h  data_filesystem.h  draw.h  https.h  lcd_st7789.h  tcp_client_link.h  tcp_server_link.h
ESP32/main-star/main/driver/src/: Custom_gpio.c  Custom_uart.c  MODE_BMI088.c  MODE_LCD.c  MODE_st7789_dever.c  Mode_RTC8564.c  Network_manage.c  User_MQTT.c  bsp_pcf8563.c  bsp_pcf8563.h  data_filesystem.c  https.c  lcd_st7789.c  rj45_tcp_client.c  rj45_tcp_server.c  rtl8201.c  tcp_client_link.c  tcp_server_link.c
ESP32S3/freertos/: sdkconfig  sdkconfig.old
ESP32S3/freertos/main/User_app/: Items.h  cat_lcd_1_14.h  main.c  main.h  sys_typedef.h  yi_lcd_1_14.h
ESP32S3/freertos/main/driver/inc/: Caven_Type.h  Custom_gpio.h  default.h  draw.h  information.h  lcd.h  lcd_st7789.h  rtc_time.h
ESP32S3/freertos/main/driver/src/: Custom_gpio.c  information.c  lcd.c  lcd_st7789.c  rtc_time.c
ESP32S3/hello_world-S3/: sdkconfig  sdkconfig.old
ESP32S3/hello_world-S3/main/: hello_world_main.c
flash_download_tool_3.9.3/configure/esp32/: spi_download.conf
flash_download_tool_3.9.3/dl_temp/: .gitignore
flash_download_tool_3.9.3/logs/: A0A3B30D4470.txt
